--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,7 +51,7 @@ html {
 */
 body {
   -webkit-font-smoothing: antialiased;
-  background-color: #e6e6e6;
+  background-color: #e7e8e9;
 }
 
 /*
@@ -117,4 +117,18 @@ h1 {
 }
 ::-webkit-scrollbar-thumb:hover {
   background-color: #eb6a4b;
+}
+
+.hero-text {
+  transform: translateY(115px);
+  transition: transform 0.5s;
+}
+.column {
+  height: 120vh;
+  padding-top: 200px;
+}
+
+.box {
+  padding: 50px;
+  background-color: greenyellow;
 }
