--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,24 +47,6 @@
   background-color: #589b9a;
 } */
 
-@keyframes slide-out {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-100%);
-  }
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
 /*
   2. Remove default margin
 */
@@ -91,7 +73,7 @@ html {
 */
 body {
   -webkit-font-smoothing: antialiased;
-  background: linear-gradient(180deg, #2e66bc 0%, #7be0f4 100%);
+  /* background: linear-gradient(180deg, #2e66bc 0%, #7be0f4 100%); */
   color: white;
 }
 
