--- a/styles/globals.css
+++ b/styles/globals.css
@@ -146,11 +146,11 @@ h4 {
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 100px;
-  background-color: #916bc8;
-  border: 2px solid #916bc8;
+  background-color: #d9d9d9;
+  border: 2px solid #d9d9d9;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #916bc8;
+  background-color: #d9d9d9;
 }
 /* .column {
   height: 120vh;
