chore: address window size

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -182,7 +182,7 @@ h4 {
   right: 0;
   bottom: 0;
   background-image: url(/x33r.png);
-  background-size: 200%;
+  background-size: cover;
   background-position: 0% 0%;
   opacity: 0.3;
   pointer-events: none;
